@@ -30,7 +30,7 @@ global $more; $more = 0;
 			
 	<?php 
 	global $wp_query, $paged;
-	$paged = ( get_query_var( 'page' ) ? get_query_var( 'page' ) : 1 );
+	$paged = ( get_query_var( 'paged' ) ? get_query_var( 'paged' ) : 1 );
 	$blog_query = new WP_Query( array( 'post_type' => 'post', 'paged' => $paged ) );
 	$temp_query = $wp_query;
 	$wp_query = null;
