@@ -1,10 +1,10 @@
 /* 
 Theme Name: Responsive 
 Theme URI: http://themeid.com/responsive-theme/ 
-Description: Responsive Theme is a flexible foundation with fluid grid system that adapts your website to mobile devices and the desktop or any other viewing environment. Theme features 9 Page Templates, 11 Widget Areas, 6 Template Layouts, 4 Menu Positions and more. Powerful but simple Theme Options for full CMS control with easy Logo Upload, Social Networking and Webmaster Tools etc. Responsive is WooCommerce Compatible, Multilingual Ready (WPML), RTL-Language Support, Retina-Ready, Search Engine Friendly, W3C Markup Validated and currently translated into 40 languages. Cross-Browser compatible and yes even the IE7. No paid memberships or clubs to get a FREE/Responsive Support you need. http://themeid.com/support/
+Description: Responsive Theme is a flexible foundation with fluid grid system that adapts your website to mobile devices and the desktop or any other viewing environment. Theme features 9 Page Templates, 11 Widget Areas, 6 Template Layouts, 4 Menu Positions and more. Powerful but simple Theme Options for full CMS control with easy Logo Upload, Social Networking and Webmaster Tools etc. Responsive is WooCommerce Compatible, Multilingual Ready (WPML), RTL-Language Support, Retina-Ready, Search Engine Friendly, W3C Markup Validated and currently translated into 40 languages. Cross-Browser compatible and yes even the IE7. No paid memberships or clubs to get Responsive help. http://cyberchimps.com/forum/free/responsive/
 
-Version: 1.9.0
-Author: ThemeID by CyberChimps
+Version: 1.9.1
+Author: ThemeID by CyberChimps.com
 Author URI: http://themeid.com
 Tags: white, black, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, left-sidebar, right-sidebar, flexible-width, theme-options, threaded-comments, full-width-template, sticky-post, translation-ready, flexible-width, rtl-language-support
 
@@ -13,7 +13,7 @@ Text Domain: responsive
 License: GNU General Public License v3 or later
 License URI: license.txt 
 
-Responsive WordPress Theme, Copyright (C) 2003-2013 Emil Uzelac 
+Responsive WordPress Theme, Copyright (C) 2003-2013 Emil Uzelac, CyberChimps Inc
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -1845,15 +1845,8 @@ form div {
 }
 
 ul.menu > li:hover {
-	background-color: #808080;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#808080), to(#363636));
-	background-image: -webkit-linear-gradient(top, #808080, #363636);
-	background-image: -moz-linear-gradient(top, #808080, #363636);
-	background-image: -ms-linear-gradient(top, #808080, #363636);
-	background-image: -o-linear-gradient(top, #808080, #363636);
-	background-image: linear-gradient(top, #808080, #363636);
+	background-color: #363636;
 	color: #fff;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#808080, endColorstr=#363636);
 }
 
 .menu .current_page_item a,
